--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node-fetch": "^2.6.12",
     "chart.js": "^4.4.0",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.4",
     "node-fetch": "^3.3.2",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19",
