--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.0",
     "dotenv": "^17.0.1",
     "file-saver": "^2.0.5",
+    "input": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.4",
     "node-fetch": "^2.7.0",
